bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if(c<0){
  ^